[package]
name = "nano-pcap-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsnano_core = { git = "https://github.com/simpago/rsnano-node.git", rev = "017ba9779" }
rsnano_messages = { git = "https://github.com/simpago/rsnano-node.git", rev = "017ba9779" }
pcap = "0.9"
pnet = "0.28"
chrono = {version="0.4", features=["serde"]}
num-traits = "0.2.17"
serde_json = "1.0.108"
serde_derive = "1.0.193"
serde = "1.0.193"
